--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,23 @@
 # Jekyll configuration
 
-name: Blog Name
+name: Cody Fidler's Portfolio
 description: Software Developer
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://streetturtle.github.io
+url:
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
-baseurl: '/jekyll-clean-dark'
+baseurl: ''
 
 author: Pavel Makhov
 copyright: 2015-2018
 
-share:
-  facebook: true
-  twitter: true
-  gplus: true
-  linkedin: true
-  pinterest: true
-  email: true
+
 
 social:
-  github: streetturtle
-  stackoverflow: ''
+  github: Cjfidler
   linkedin:
-  instagram: ''
-  lastfm: ''
-  rss: feed.xml
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key:
@@ -38,8 +28,7 @@ yandex_metrica:
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: streetturtle
-comments: false
+
 
 permalink: /:year/:month/:title/
 
